# kitsuyui-_-rust-codecov

./: .env.sample  .gitignore  .gitignore.in  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: cratesio-publish.yml  test.yml
src/: author.rs  branch_detail.rs  branches.rs  commits.rs  errors.rs  lib.rs  owner.rs  repos.rs  totals.rs  url.rs
