[package]
name = "rust-codecov"
version = "0.1.0"
edition = "2021"
authors = ["Yui Kitsu <kitsuyui+github@kitsuyui.com>"]
description = "Codecov API client for Rust"
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/kitsuyui/rust-codecov"
documentation = "https://docs.rs/rust-codecov"
categories = ["api-bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "^0.11", features = ["blocking", "json"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = { version = "^1.0", features = ["raw_value"] }
