[package]
name = "codecov"
version = "0.3.3"
edition = "2021"
authors = ["Yui Kitsu <kitsuyui+github@kitsuyui.com>"]
description = "Codecov API client for Rust"
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/kitsuyui/rust-codecov"
documentation = "https://docs.rs/codecov"
categories = ["api-bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "^0.11.18", features = ["blocking", "json"] }
serde = { version = "^1.0.182", features = ["derive"] }
serde_json = { version = "^1.0.104", features = ["raw_value"] }
